--- a/mmmv_devel_tools/src/mmmv_devel_tools/breakdancemake/doc/JavaScript_and_CSS_files_renaming_example/Rakefile
+++ b/mmmv_devel_tools/src/mmmv_devel_tools/breakdancemake/doc/JavaScript_and_CSS_files_renaming_example/Rakefile
@@ -131,7 +131,7 @@ def update_version
    BDMPROJECTDESCRIPTOR.i_project_JavaScript_and_CSS_version,
    msgcs)
    if msgcs.b_failure()
-      puts msgcs.to_s
+      kibuvits_writeln msgcs.to_s
       exit
    end # if
 end # update_version
@@ -148,12 +148,12 @@ task :default do
    ar_task_names=Array.new
    Rake.application.tasks.each {|x_task| ar_task_names<<x_task.to_s}
    ar_task_names.sort!
-   puts "\n\nAvailable Rake functions:\n\n"
+   kibuvits_writeln "\n\nAvailable Rake functions:\n\n"
    s_1="                "
    ar_task_names.each do |s_task_name|
-      puts s_1+s_task_name.to_s
+      kibuvits_writeln s_1+s_task_name.to_s
    end # loop
-   puts "\n\n"
+   kibuvits_writeln "\n\n"
 end # default
 
 #==========================================================================
