--- a/mmmv_devel_tools/src/mmmv_devel_tools/renessaator/doc/lesson_02_Rakefile_example/Rakefile
+++ b/mmmv_devel_tools/src/mmmv_devel_tools/renessaator/doc/lesson_02_Rakefile_example/Rakefile
@@ -16,10 +16,10 @@ if !defined? MMMV_DEVEL_TOOLS_HOME
 end # if
 
 require(MMMV_DEVEL_TOOLS_HOME+
-"/src/bonnet/mmmv_devel_tools_initialization_t1.rb")
+"/src/api/mmmv_devel_tools_public_interface.rb")
 
 task :run_renessaator do
-   puts "\nRunning the renessaator task from the Rakefile ..."
+   kibuvits_writeln "\nRunning the renessaator task from the Rakefile ..."
 
    s_fp_x=THIS_PROEJCT_HOME+"/the_soruce_X.js"
    s_fp_y=THIS_PROEJCT_HOME+"/the_soruce_Y.js"
@@ -33,24 +33,24 @@ task :run_renessaator do
 
    i_watch_cache_max_size=100 # in number of files
 
-   C_mmmv_devel_tools_global_singleton.run_renessaator_t1(
+   C_mmmv_devel_tools.run_renessaator_t1(
    ar_fp_files_to_edit_with_the_renessaator,
    ar_files_to_watch_for_changes_in_addition_to_the_renessaator_edited_files,
    i_watch_cache_max_size)
 
-   puts "Rakefile task complete.\n\n"
+   kibuvits_writeln "Rakefile task complete.\n\n"
 end # run_renessaator
 
 task :default do
    ar_task_names=Array.new
    Rake.application.tasks.each {|x_task| ar_task_names<<x_task.to_s}
    ar_task_names.sort!
-   puts "\n\nAvailable Rake functions:\n\n"
+   kibuvits_writeln "\n\nAvailable Rake functions:\n\n"
    s_1="                "
    ar_task_names.each do |s_task_name|
-      puts s_1+s_task_name.to_s
+      kibuvits_writeln s_1+s_task_name.to_s
    end # loop
-   puts "\n\n"
+   kibuvits_writeln "\n\n"
 end # default
 
 #==========================================================================
